# facerec

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.worker  Dockerfile.worker.dev  Dockerfile.worker.prod  LICENSE  README.md  alembic.ini  dev_worker.sh  monitor_worker.sh  pyproject.toml  run_streamlit_app.py  start-dev.sh
app/: main.py
app/api/: __init__.py  face_recognition.py
app/cli/: README.md  detect_faces.py  image_queue_producer.py  index_s3_album.py  test_face_recognition.py
app/consumers/: __init__.py
app/core/: config.py  container.py  exceptions.py  logging.py
app/domain/: __init__.py
app/infrastructure/: dependencies.py
app/services/: __init__.py  face_indexing.py  face_matching.py  file_service.py  models.py
app/ui/: face_matching_app.py
docker/api/: Dockerfile  task-definition.json
docker/worker/: Dockerfile.worker.dev  Dockerfile.worker.prod
docs/: architecture.md  architecture_decisions.md  aws_api_deployment.md  aws_deployment_plan.md  docker-deployment.md  ecs-autoscaling-plan.md  face_recognition_plan.md  implementation_plan.md  overview.txt  project_structure.txt  tech_decisions.md  terraform-implementation-plan.md
docs/architecture/: scaling_strategy.md
docs/testing/: performance_test_plan.md
migrations/: env.py
migrations/versions/: 6379ef369a98_add_face_recognition_schema.py  (+1 more)
scripts/: README.md
terraform/: Makefile  README-SIMPLIFIED.md  README.md  data.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: __init__.py  test_face_recognition.py
(+57 files in other folders)
